Fixed Monaco Editor dark mode flash white before loading

--- a/projects/ng-dialogs/src/app/code-editor/code-editor.component.scss
+++ b/projects/ng-dialogs/src/app/code-editor/code-editor.component.scss
@@ -1,3 +1,7 @@
+.sxc-dark {
+  background-color: #1e1e1e;
+}
+
 .mat-fab {
   position: absolute;
   right: 48px;
